# Win32Cpp20-DevClass

./: .gitignore  CMakeLists.txt  CMakePresets.json  RemotePointer.cpp  SafeHandle.cpp  SafeProcessHandle.cpp  SafeThreadHandle.cpp  conanfile.txt  pk.cpp
includes/: Def.h  RemotePointer.hpp  SafeHandle.hpp  SafeProcessHandle.hpp  SafeThreadHandle.hpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  test.cpp
